--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,14 @@ dependencies:
   uuid: ^4.5.1
   firebase_storage: ^12.4.9
   image_picker: ^1.1.2
-  google_sign_in: ^7.1.1
   equatable: ^2.0.7
   flutter_bloc: ^9.1.1
   google_fonts: ^6.3.0
+
+dependency_overrides:
+  google_sign_in: ^7.1.1
+
+
 
 dev_dependencies:
   flutter_test:
